--- a/configs/x0/dsm-ffhq-400m.yaml
+++ b/configs/x0/dsm-ffhq-400m.yaml
@@ -1,3 +1,4 @@
+# Total Params: 383.29 M
 model:
   base_learning_rate: 1.0e-4
   target: sgm.models.diffusion.DiffusionEngine
@@ -26,7 +27,7 @@ model:
         model_channels: 256
         attention_resolutions: []
         num_res_blocks: 2
-        channel_mult: [1, 2, 4, 4 ]
+        channel_mult: [ 1, 2, 4, 4 ]
         num_head_channels: 64
 
     first_stage_config:
